--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" href="./src/public/favicon.ico" /> -->
-    <link rel="icon" type="image/svg+xml" href="./src/public/Group 17.svg" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -12,7 +9,9 @@
        Unforgettable experiences await!"
       data-rh="true"
     />
-    <title>Vite + React + TS</title>
+    <link rel="icon" href="./src/public/fav.ico" />
+    <link rel="icon" type="image/svg+xml" href="./src/public/fav.svg" />
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
