--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,40 +9,17 @@
        Unforgettable experiences await!"
       data-rh="true"
     />
-    <link rel="icon" href="./src/public/fav.ico" />
-    <link rel="icon" type="image/svg+xml" href="./src/public/fav.svg" />
+    <meta
+      name="google-site-verification"
+      content="qrdMeoQ053temxLKvncbukAXB-q63dvSEkKL3bXNdko"
+    />
+    <link rel="icon" href="./fav.ico" />
+    <link rel="icon" type="image/svg+xml" href="./fav.svg" />
     <title></title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
-    <!-- 
-    <div id="fb-root"></div>
-    <div id="fb-customer-chat" class="fb-customerchat"></div>
-    <script>
-      var chatbox = document.getElementById("fb-customer-chat");
-      chatbox.setAttribute("page_id", "234798309706084");
-      chatbox.setAttribute("attribution", "biz_inbox");
     </script>
-    <script>
-      window.fbAsyncInit = function () {
-        FB.init({
-          xfbml: true,
-          version: "v18.0",
-        });
-      };
-
-      (function (d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      })(document, "script", "facebook-jssdk");
-    </script> -->
-    <!-- Add this to your HTML -->
   </body>
 </html>
